--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=revopstrainingblr@gmail.com
+email=devopstrainingblr@gmail.com
 #always-auth=true
 _auth=LW4gImFkbWluOmFkbWluIiANCg==
 allowRepublish=true
