--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 email=richa06091992@gmail.com
 #always-auth=true
-_auth=${LW4gImFkbWluOmFkbWluIiANCg==}
+_auth=LW4gImFkbWluOmFkbWluIiANCg=
 allowRepublish=true
