--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-registry = http://65.2.3.170:8081/repository/mss-nodejs-repo/
 email=richa06091992@gmail.com
-always-auth=true
+#always-auth=true
 _auth=LW4gImFkbWluOmFkbWluIiANCg==
+allowRepublish=true
