--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
+registry=http://13.127.232.213:8081/repository/mss-nodejs-repo/
 email=richa06091992@gmail.com
 #always-auth=true
 _auth=LW4gImFkbWluOmFkbWluMDYiIA0K
